add authentication to documentation
